# Rep_pure_pursuit

./: README.md
CMake/: CMakeLists.txt  package.xml
clean_avoidance/devel/: local_setup.sh
clean_avoidance/devel/include/clean_avoidance/: CleanAvoidanceActionResult.h  CleanAvoidanceGoal.h
clean_avoidance/devel/include/costmap_2d/: ObstaclePluginConfig.h
clean_avoidance/devel/lib/costmap_2d/: costmap_2d_markers  costmap_2d_node
clean_avoidance/devel/lib/pkgconfig/: clean_avoidance.pc  costmap_2d.pc  nav_core.pc  navfn.pc
clean_avoidance/devel/lib/python2.7/dist-packages/clean_avoidance/msg/: _CleanAvoidanceActionFeedback.py  _CleanAvoidanceActionResult.py  _CleanAvoidanceResult.py  __init__.py
clean_avoidance/devel/lib/python2.7/dist-packages/costmap_2d/cfg/: ObstaclePluginConfig.py  VoxelPluginConfig.py
clean_avoidance/devel/lib/python2.7/dist-packages/navfn/srv/: _SetCostmap.py
clean_avoidance/devel/share/clean_avoidance/cmake/: clean_avoidance-msg-paths.cmake  clean_avoidanceConfig.cmake
clean_avoidance/devel/share/clean_avoidance/msg/: CleanAvoidanceAction.msg  CleanAvoidanceActionGoal.msg  CleanAvoidanceActionResult.msg  CleanAvoidanceFeedback.msg  CleanAvoidanceResult.msg
clean_avoidance/devel/share/common-lisp/ros/clean_avoidance/msg/: CleanAvoidanceActionGoal.lisp  CleanAvoidanceActionResult.lisp  CleanAvoidanceFeedback.lisp  CleanAvoidanceGoal.lisp  CleanAvoidanceResult.lisp  _package.lisp  _package_CleanAvoidanceAction.lisp  _package_CleanAvoidanceActionFeedback.lisp  _package_CleanAvoidanceActionGoal.lisp  _package_CleanAvoidanceActionResult.lisp  _package_CleanAvoidanceGoal.lisp  _package_CleanAvoidanceResult.lisp  clean_avoidance-msg.asd
clean_avoidance/devel/share/common-lisp/ros/costmap_2d/msg/: VoxelGrid.lisp
clean_avoidance/devel/share/common-lisp/ros/navfn/srv/: SetCostmap.lisp
clean_avoidance/devel/share/nav_core/cmake/: nav_coreConfig.cmake
clean_avoidance/devel/share/roseus/ros/costmap_2d/: manifest.l
clean_avoidance/devel/share/roseus/ros/navfn/: manifest.l
clean_avoidance/devel/share/slam_sim_demo/cmake/: slam_sim_demoConfig.cmake
clean_avoidance/src/astar_search/: CMakeLists.txt
clean_avoidance/src/clean_avoidance/: CMakeLists.txt
clean_avoidance/src/clean_avoidance/action/: CleanAvoidance.action
clean_avoidance/src/clean_avoidance/include/clean_avoidance/: clean_avoidance.hpp  pure_pursuit.hpp
clean_avoidance/src/clean_avoidance/launch/: clean_avoidance.launch  clean_avoidance_double.launch  clean_avoidance_third.launch
clean_avoidance/src/clean_avoidance/param/: clean_avoidance.yaml  costmap_common_params.yaml  global_costmap_params.yaml
clean_avoidance/src/clean_avoidance/src/: clean_avoidance.cpp  clean_avoidance_double.cpp  clean_avoidance_third.cpp  pure_pursuit.cpp
clean_avoidance/src/costmap_2d/include/costmap_2d/: costmap_2d_ros.h
clean_avoidance/src/costmap_2d/plugins/: obstacle_layer.cpp  static_layer.cpp
clean_avoidance/src/costmap_2d/src/: costmap_2d_publisher.cpp  costmap_2d_ros.cpp
clean_avoidance/src/navfn/src/: navfn_ros.cpp
clean_avoidance_old/devel/: .catkin  .rosinstall  setup.sh
clean_avoidance_old/devel/include/clean_avoidance/: CleanAvoidanceAction.h  CleanAvoidanceActionFeedback.h  CleanAvoidanceActionGoal.h  CleanAvoidanceFeedback.h  CleanAvoidanceResult.h
clean_avoidance_old/devel/include/costmap_2d/: VoxelPluginConfig.h
clean_avoidance_old/devel/lib/clean_avoidance/: clean_avoidance_double_node  clean_avoidance_node  clean_avoidance_third_node
clean_avoidance_old/devel/lib/costmap_2d/: costmap_2d_cloud
clean_avoidance_old/devel/lib/navfn/: navfn_node
clean_avoidance_old/devel/lib/pkgconfig/: astar_search.pc  navigation_sim_demo.pc  slam_sim_demo.pc
clean_avoidance_old/devel/share/astar_search/cmake/: astar_searchConfig.cmake
clean_avoidance_old/devel/share/clean_avoidance/msg/: CleanAvoidanceActionFeedback.msg  CleanAvoidanceGoal.msg
clean_avoidance_old/devel/share/costmap_2d/cmake/: costmap_2d-msg-paths.cmake  costmap_2dConfig.cmake
clean_avoidance_old/devel/share/navfn/cmake/: navfnConfig.cmake
clean_avoidance_old/devel/share/navigation_sim_demo/cmake/: navigation_sim_demoConfig.cmake
clean_avoidance_old/devel/share/roseus/ros/clean_avoidance/: manifest.l
clean_avoidance_old/src/astar_search/src/: astar_search.cpp
clean_avoidance_old/src/clean_avoidance/: CMakeLists.txt
clean_avoidance_old/src/clean_avoidance/include/clean_avoidance/: pure_pursuit.hpp
clean_avoidance_old/src/clean_avoidance/src/: clean_avoidance.cpp
clean_avoidance_old/src/costmap_2d/include/costmap_2d/: static_layer.h
clean_avoidance_old/src/costmap_2d/plugins/: obstacle_layer.cpp
clean_avoidance_old/src/costmap_2d/src/: costmap_2d_ros.cpp
clean_avoidance_old/src/navigation_sim_demo/launch/include/: move_base.launch.xml
clean_avoidance_old/src/navigation_sim_demo/param/: costmap_common_params.yaml  local_costmap_params.yaml
conclusion/: pure_pursuit总结.md
double_pure_pursuit/: CMakeLists.txt  package.xml
double_pure_pursuit/cfg/: PurePursuit.cfg
double_pure_pursuit/include/: pub_path.hpp  pure_pursuit.hpp
double_pure_pursuit/src/: circle_path.cpp  pub_path.cpp  pure_pursuit.cpp
pursuit_ws/paths/: .test.json.swp  test.json
pursuit_ws/src/inspur_msgs/: CMakeLists.txt  README.md  package.xml
pursuit_ws/src/inspur_msgs/msg/: AreaData.msg  AreaPubData.msg  CleanException.msg  CleanInfo.msg  EssentialInfo.msg  ExceptionInfo.msg  Line2DFlt32.msg  MapData.msg  PathData.msg  TaskAreaData.msg
pursuit_ws/src/inspur_msgs/srv/: AreaPub.srv  Elevator.srv  ForbiddenLineManager.srv  MapManager.srv  MapStatus.srv  ModifyMap.srv  ModifyNavParam.srv  MoveManager.srv  MoveToGoal.srv  ReachGoal.srv  TaskArea.srv  TaskManager.srv  TaskResult.srv  UpdateNavMap.srv
pursuit_ws/src/task_manager/: CMakeLists.txt  package.xml
pursuit_ws/src/task_manager/include/: pub_path.hpp  pure_pursuit.hpp  task_manager.h
pursuit_ws/src/task_manager/launch/: task_manager.launch
pursuit_ws/src/task_manager/src/: pub_path.cpp  pure_pursuit.cpp  task_manager.cpp  task_manager_node.cpp
(+31 files in other folders)
